SQLSRV-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql2019-deployment
  namespace: ocp-demo
#--Ajouter une App OpenShift et pas seulement un Deployment
  labels:
    app: sqlserver
    app.kubernetes.io/component: mssql
    app.kubernetes.io/instance: mssql
    app.kubernetes.io/part-of: mysqlserver
#--
spec:
  selector:
    matchLabels:
      app: mssql
      version: v15.0
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mssql2019
        version: v15.0
    spec:
      containers:
        - name: sqlserver
          image: "mcr.microsoft.com/mssql/server:2019-latest"
          ports:
            - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  labels:
    app: mssql2019
spec:
  ports:
  - port: 1433
    targetPort: 1433
  selector:
    app: mssql2019
